crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_sfc_ssr_uses_setup_bindings_for_kebab_case_imported_components.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { ssrRenderComponent as _ssrRenderComponent } from "@vue/server-renderer"


function ssrRender(_ctx, _push, _parent, _attrs, $props, $setup, $data, $options) {
  _push(`<!--[-->`)
  _push(_ssrRenderComponent($setup.DashTest, null, null, _parent))
  _push(_ssrRenderComponent($setup.DashTest, null, null, _parent))
  _push(`<!--]-->`)
}
import DashTest from './dash-test.vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'anonymous',
  ssrRender: ssrRender,
  setup(__props) {


return { DashTest }
}

})
