crates/vize_atelier_sfc/src/compile/snapshots/vize_atelier_sfc__compile__tests__script_setup_sfc_vapor_uses_ctx_bindings_for_lowercase_imported_components.snap
---
source: crates/vize_atelier_sfc/src/compile/tests.rs
assertion_line: 808
expression: result.code.as_str()
---
import { defineVaporComponent as _defineVaporComponent, getCurrentInstance as _getCurrentInstance, proxyRefs as _proxyRefs } from 'vue'
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback } from 'vue';


function render(_ctx, $props, $emit, $attrs, $slots) {
  const _component_primitive = _ctx.Primitive
  const n0 = _createComponentWithFallback(_component_primitive, null, null, true)
  return n0
}
const __vaporRender = render
import { Primitive } from '@tresjs/core'

export default /*@__PURE__*/_defineVaporComponent({
  __name: 'anonymous',
  render: __vaporRender,
  setup(__props, { emit: __emit, attrs: __attrs, slots: __slots }) {


const __returned__ = { Primitive }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
const __instance = _getCurrentInstance()
const __ctx = _proxyRefs(__returned__)
if (__instance) __instance.setupState = __ctx
return __vaporRender(__ctx, __props, __emit, __attrs, __slots)
}

})
